fix(popup): ensure items' z-index effective
fix #414

--- a/style/notice.scss
+++ b/style/notice.scss
@@ -36,6 +36,10 @@ $notice: map.merge(
 
   @include basis;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   $title: #{&}__title;
   $icon: #{&}__icon;
   $close: #{&}__close;
